--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ logging:
 
 spring:
   application:
-    name: kotlin-template-repository
+    name: marketplace-gateway
 
 server:
-  port: 33300
+  port: 33306
