--- a/src/main/resources/log4j2.yml
+++ b/src/main/resources/log4j2.yml
@@ -4,9 +4,9 @@ Configuration:
   Properties:
     Property:
       - name: app-name
-        value: "module-name"
+        value: "marketplace-gateway"
       - name: log-path
-        value: "logs/module-name"
+        value: "logs/marketplace-gateway"
       - name: log-archive-path
         value: ${log-path}/archive
       - name: log-file-pattern
