VJ-51: Уменьшен интервал пулла из эврики

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://marketplace-eureka:33307/eureka
+    registry-fetch-interval-seconds: 10
 
 app:
   auth:
