VJ-52: Добавил поддержку ленты услуг

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,10 @@ app:
       path: /api/auth/**                # Ваш апи паттерн по которому определяется сервис. То есть все ваши запросы должны начинаться с этого паттерна. Повторения не допустимы
       uri: lb://marketplace-auth-api    # По сути адрес обращения. Самый простой способ узнать - запускаем этот сервис, подключаем свой сервис к нужной eureka и смотрим в ней
       is-secure: false                  # У всех сервисов кроме авторизации ставить true
+    - id: marketplace-feed-api
+      path: /api/feed/**
+      is-secure: true
+      uri: lb://marketplace-feed-api
 
 server:
   port: 33306
