--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ app:
     - id: marketplace-auth-api          # Уникальный id. Пишите что хотите. В идеале оставляем имя сервиса
       path: /api/auth/**                # Ваш апи паттерн по которому определяется сервис. То есть все ваши запросы должны начинаться с этого паттерна. Повторения не допустимы
       uri: lb://marketplace-auth-api    # По сути адрес обращения. Самый простой способ узнать - запускаем этот сервис, подключаем свой сервис к нужной eureka и смотрим в ней
-      is-secure: true                  # У всех сервисов кроме авторизации ставить true
+      is-secure: false                  # У всех сервисов кроме авторизации ставить true
     - id: marketplace-feed-api
       path: /api/feed/**
       uri: lb://marketplace-feed-api
