VJ-80: Добавил поддержку заказов

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,10 @@ app:
       path: /api/feed/**
       uri: lb://marketplace-feed-api
       is-secure: true
+    - id: marketplace-orders-api
+      path: /api/orders/**
+      uri: lb://marketplace-orders-api
+      is-secure: true
 
 server:
   port: 33306
