VJ-53: Добавлен роутинг для сервиса профилей

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,10 @@ app:
       path: /api/orders/**
       uri: lb://marketplace-orders-api
       is-secure: true
+    - id: marketplace-profile-api
+      path: /api/profile/**
+      uri: lb://marketplace-profile-api
+      is-secure: true
 
 server:
   port: 33306
