--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,10 @@ app:
       path: /api/profile/**
       uri: lb://marketplace-profile-api
       is-secure: true
+    - id: marketplace-messanger-api
+      path: /api/chat/**
+      uri: lb://marketplace-messanger-api
+      is-secure: true
 
 server:
   port: 33306
